--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ h1{
     justify-content: space-around;
 }
 .child .reloStyle{
+    z-index: 2;
     position: absolute;
     color: white;
     font-size:2.5em;
@@ -104,16 +105,12 @@ h1{
     background-size: cover;
     background-position: center;
 }
-.attribution .img{
-    display: inline-block;
-    position: sticky;
-    margin: 30px auto;
-    width: 40px;
-    height: 40px;
-    background-color: white;
+.attribution svg{
+    margin: 5px;
 }
-.attribution img:hover{
-   
+.attribution svg > path:hover{
+   cursor: pointer;
+   fill:rgba(255, 0, 0, 0.388);
    
 }
 .attribution div{
@@ -133,4 +130,19 @@ h1{
     .attribution{
         background-position: right;
     }
+}
+/* .hoja{
+    background-color:#34364F;
+    height: 50%;
+    border-radius: 10%;
+} */
+.bottom:hover{
+    transform: translateY(-100%);
+    background-color:#2C2C44 ;
+    transition: 1s all;
+}
+.top:hover{
+    transform: translateY(100%);
+    transition: 1s all;
+    background-color: #34364F;
 }
